WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37791
[DRT/Chromium] Fix a test initialization problem
https://bugs.webkit.org/show_bug.cgi?id=37791
Summary
[DRT/Chromium] Fix a test initialization problem
Kent Tamura
Reported
2010-04-19 00:57:52 PDT
[DRT/Chromium] Fix a test initialization problem
Attachments
Patch
(1.30 KB, patch)
2010-04-19 01:00 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-04-19 01:00:42 PDT
Created
attachment 53658
[details]
Patch
Kent Tamura
Comment 2
2010-04-19 02:06:11 PDT
Comment on
attachment 53658
[details]
Patch Clearing flags on attachment: 53658 Committed
r57807
: <
http://trac.webkit.org/changeset/57807
>
Kent Tamura
Comment 3
2010-04-19 02:06:19 PDT
All reviewed patches have been landed. Closing bug.
Shinichiro Hamaji
Comment 4
2010-04-19 02:09:39 PDT
The record of our local discussion: chromoium's test_shell seems to be calling ResetTestController twice(before runFileTest and after runFileTest). The former call seems to be mandatory and the latter call seems to be only for purity.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug