2010-04-19  Kent Tamura  <tkent@chromium.org>

Reviewed by Shinichiro Hamaji.

        [DRT/Chromium] Fix a test initialization problem
        https://bugs.webkit.org/show_bug.cgi?id=37791

        * DumpRenderTree/chromium/DumpRenderTree.cpp:
        (runTest): Call resetTestController() before runFileTest(). Some
          controllers initialize their fields in reset() and not in their
          constructors.

Canonical link: https://commits.webkit.org/49088@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57807 268f45cc-cd09-0410-ab3c-d52691b4dbfc